Fix flattened padding to accurate 18px between spacing-4/5

--- a/src/core/client/stream/tabs/Comments/Comment/CommentContainer.css
+++ b/src/core/client/stream/tabs/Comments/Comment/CommentContainer.css
@@ -78,5 +78,5 @@ $commenterActionEditColorActive: var(--palette-primary-300);
 }
 
 .flattenedPadding {
-  padding-left: var(--spacing-4);
+  padding-left: 18px;
 }
